# UFCMatchPredictor

./: .gitignore  LICENSE  README.md  cli.py  fighter_pca.py  pyproject.toml  requirements.txt  run.sh  stats.html
data/: features_core.txt
src/ufc/: config.py
src/ufc/scraper/: base.py
ufc/: __init__.py  config.py  db.py
ufc/features/: base.py  core.py  full.py
ufc/ml/: core.py  full.py
ufc/scraper/: __init__.py  base.py  events.py  fighters.py  odds.py
